# ChangeLog for dev-java/jgoodies-looks
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jgoodies-looks/ChangeLog,v 1.4 2005/02/03 04:11:56 compnerd Exp $

  02 Feb 2005; Saleem Abdulrasool <compnerd@gentoo.org> files/build.xml:
  Updated build.xml; Fixes Bug #80516

  28 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  jgoodies-looks-1.2.2.ebuild:
  readded dropped keywords.

  06 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  jgoodies-looks-1.2.2.ebuild:
  slotted jgoodies-looks-1.2.2 as 1.2 for future compatibility.

*jgoodies-looks-1.2.2 (06 Jan 2005)

  06 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +metadata.xml,
  +files/build.xml, +files/plastic.txt, +jgoodies-looks-1.2.2.ebuild:
  Initial import. Ebuild contributed by Saleem A. <compnerd@gentoo.org>. Fixes
  #74996.
