@@ -1,6 +1,9 @@
+MD5 261021568f8e41629fcea5dca5be4ddc jgoodies-looks-1.3_beta1.ebuild 1190
 MD5 07e8ef20e5c3ec1b4d4d2e37324b6c1b jgoodies-looks-1.2.2.ebuild 1127
-MD5 a1be758eb60bdb84aefd2b4135ffae0e ChangeLog 857
+MD5 db01de5e14b736735c1d5896fd13895b ChangeLog 1040
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 15cde7bcfb76ac46139e101823ff4401 files/digest-jgoodies-looks-1.2.2 61
 MD5 f237f515cdae3f2d57a487ea09a68880 files/plastic.txt 308
+MD5 4a14ed9ab3e6203cbb6637a867dab1e3 files/1.3_beta1-build.xml 1659
 MD5 0ab2689d7f18b425aa99581d541fb83d files/build.xml 3035
+MD5 7f442fc8252a64c191058ec08c51bcdf files/digest-jgoodies-looks-1.3_beta1 71
