@@ -1,0 +1,62 @@
+<?xml version="1.0"?>
+
+<project name="looks" default="jar">
+	<!-- some properties -->
+	<property name="src.dir" value="srcdir" />
+	<property name="build.dir" value="build" />
+	<property name="docs.dir" value="docs" />
+	<property name="dist.dir" value="dist" />
+	<property name="jarfile" value="${dist.dir}/${ant.project.name}.jar" />
+	<property name="target.jdk" value="1.4" />
+
+	<!-- init -->
+	<target name="init">
+		<mkdir dir="${dist.dir}" />
+		<mkdir dir="${build.dir}" />
+		<mkdir dir="${docs.dir}" />
+	</target>	
+
+	<!-- compile everything -->
+	<target name="compile" depends="init">
+		<mkdir dir="${build.dir}" />
+		<javac srcdir="${src.dir}" 
+			destdir="${build.dir}"
+			source="${target.jdk}"
+			target="${target.jdk}" />
+
+		<copy toDir="${build.dir}">
+			<fileset dir="${src.dir}" excludes="**/*.java"/>
+		</copy>
+	</target>
+
+	<!-- build the jar file -->
+	<target name="jar" depends="compile">
+		<jar jarfile="${jarfile}" basedir="${build.dir}" />
+	</target>
+	
+	<!-- generate javadocs -->
+	<target name="docs" depends="init">
+		<javadoc sourcepath="${src.dir}"
+			packagenames="com.*"
+           		destdir="${docs.dir}"
+           		author="true"
+           		version="true"
+           		use="true"
+           		windowtitle="${ant.project.name} API" />
+	</target>
+	
+	<!-- clean up -->
+	<target name="clean">
+		<delete dir="${build.dir}" />
+		<delete dir="${docs.dir}" />
+		<delete dir="${dist.dir}" />
+	</target>
+
+        <!-- zip the sources -->
+        <target name="sourcezip">
+		<zip destfile="${dist.dir}/${ant.project.name}-src.zip">
+                        <zipfileset dir="${src.dir}" />
+                </zip>
+        </target>
+
+</project>
