@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/jgoodies-looks
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jgoodies-looks/ChangeLog,v 1.4 2005/02/03 04:11:56 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jgoodies-looks/ChangeLog,v 1.5 2005/03/08 14:16:01 luckyduck Exp $
+
+*jgoodies-looks-1.3_beta1 (08 Mar 2005)
+
+  08 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org>
+  +files/1.3_beta1-build.xml, +jgoodies-looks-1.3_beta1.ebuild:
+  new upstream version.
 
   02 Feb 2005; Saleem Abdulrasool <compnerd@gentoo.org> files/build.xml:
   Updated build.xml; Fixes Bug #80516
